Updated code for output screen
Updated the code for the output screen so that the text remains correctly in-place on the screen when a new input is added to be displayed on the screen

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -159,8 +159,9 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp.Box_Bp
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
@@ -1031,14 +1032,14 @@ SynthBenchmark.TimeStamp=2022.01.27-22.53.12
 SynthBenchmark.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
-MRUItem3=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
-MRUItem4=/Game/PuzzleBP/Blueprints/PuzzleBlock
-MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
+MRUItem5=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
+MRUItem6=/Game/PuzzleBP/Blueprints/PuzzleBlock
+MRUItem7=/Game/PuzzleBP/Blueprints/ALAN
 MRUItem8=/Game/Materials/ButtonMats/Purple
 MRUItem9=/Game/Materials/ButtonMats/White
 MRUItem10=/Game/Materials/ButtonMats/Blue
@@ -2579,10 +2580,10 @@ StaticMeshComponent=
 ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
-OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+OutputDisplay_C=
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,
 ALAN_C=
-BrushComponent=
+BrushComponent=SkeletalMeshComponent.Collision.Collision,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2652,7 +2653,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
-SceneComponent=
+SceneComponent=SkeletalMeshComponent.Collision.Collision,
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,
