Further update on previous push

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -162,6 +162,8 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/InputEnum.InputEnum
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
@@ -1032,26 +1034,26 @@ SynthBenchmark.TimeStamp=2022.01.27-22.53.12
 SynthBenchmark.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
-MRUItem5=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
-MRUItem6=/Game/PuzzleBP/Blueprints/PuzzleBlock
-MRUItem7=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem8=/Game/Materials/ButtonMats/Purple
-MRUItem9=/Game/Materials/ButtonMats/White
-MRUItem10=/Game/Materials/ButtonMats/Blue
-MRUItem11=/Game/Materials/ButtonMats/Pink
-MRUItem12=/Game/Materials/ButtonMats/Green
-MRUItem13=/Game/Materials/ButtonMats/Yellow
-MRUItem14=/Game/Materials/ButtonMats/Red
-MRUItem15=/Game/Materials/ButtonMats/Black
-MRUItem16=/Game/Materials/ButtonMats/Orange
-MRUItem17=/Game/Materials/ButtonMats/RedMat
-MRUItem18=/Game/Puzzle/Meshes/BaseMaterial
-MRUItem19=/Game/Puzzle/Meshes/BlueMaterial
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/InputEnum
+MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
+MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
+MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
+MRUItem7=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
+MRUItem8=/Game/PuzzleBP/Blueprints/PuzzleBlock
+MRUItem9=/Game/Materials/ButtonMats/Purple
+MRUItem10=/Game/Materials/ButtonMats/White
+MRUItem11=/Game/Materials/ButtonMats/Blue
+MRUItem12=/Game/Materials/ButtonMats/Pink
+MRUItem13=/Game/Materials/ButtonMats/Green
+MRUItem14=/Game/Materials/ButtonMats/Yellow
+MRUItem15=/Game/Materials/ButtonMats/Red
+MRUItem16=/Game/Materials/ButtonMats/Black
+MRUItem17=/Game/Materials/ButtonMats/Orange
+MRUItem18=/Game/Materials/ButtonMats/RedMat
+MRUItem19=/Game/Puzzle/Meshes/BaseMaterial
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2349,6 +2351,8 @@ Box_Bp_C="\"Object.Actor.Tags\" "
 StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
+OutputDisplay_C="\"Object.ReceivedCommands\" "
+ALAN_C=
 
 [MaterialEditor]
 PrimType=1
@@ -2535,7 +2539,7 @@ SkeletalMeshComponent.Collision=True
 MaterialEditorInstanceConstant.General=True
 Box_Brush_Movement_C.Actor=True
 StaticMeshComponent.Collision=True
-UserDefinedEnum.Enumerators=False
+UserDefinedEnum.Enumerators=True
 TextRenderComponent.Text=True
 K2Node_VariableGet.Variable=True
 
@@ -2581,9 +2585,9 @@ ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 OutputDisplay_C=
-K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,
+K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ALAN_C=
-BrushComponent=SkeletalMeshComponent.Collision.Collision,
+BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
