Added code to ALAN to handle colours
Removed redundant button blueprints, added further code to ALAN to handle the changing of colours of boxes

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Audio/Spraysounds
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints/CommandInterface
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -161,13 +161,10 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
-OpenAssetsAtExit=/Game/ParticleFX/spraySystem.spraySystem
-OpenAssetsAtExit=/Game/Audio/Spraysounds/spraySounds.spraySounds
-OpenAssetsAtExit=/Game/ParticleFX/sprayTestBP.sprayTestBP
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
-WindowSize=X=1273.000 Y=665.000
+WindowSize=X=1273.333 Y=665.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -184,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1036,26 +1033,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Maps/GameEnvironment
-MRUItem1=/Game/PuzzleBP/Maps/PuzzleExampleMap
-MRUItem2=/Game/ParticleFX/sprayTestBP
-MRUItem3=/Game/Audio/Spraysounds/spraySounds
-MRUItem4=/Game/PuzzleBP/Maps/ParticleTest
-MRUItem5=/Game/ParticleFX/spraySystem
-MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ColourButton
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/InputEnum
-MRUItem9=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
-MRUItem11=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem12=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
-MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
-MRUItem15=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
-MRUItem16=/Game/PuzzleBP/Blueprints/PuzzleBlock
-MRUItem17=/Game/Materials/ButtonMats/Purple
-MRUItem18=/Game/Materials/ButtonMats/White
-MRUItem19=/Game/Materials/ButtonMats/Blue
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem1=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
+MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem4=/Game/PuzzleBP/Maps/GameEnvironment
+MRUItem5=/Game/PuzzleBP/Maps/PuzzleExampleMap
+MRUItem6=/Game/ParticleFX/sprayTestBP
+MRUItem7=/Game/Audio/Spraysounds/spraySounds
+MRUItem8=/Game/PuzzleBP/Maps/ParticleTest
+MRUItem9=/Game/ParticleFX/spraySystem
+MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/ColourButton
+MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/InputEnum
+MRUItem12=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
+MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
+MRUItem15=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
+MRUItem16=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
+MRUItem17=/Game/PuzzleBP/Blueprints/PuzzleBlock
+MRUItem18=/Game/Materials/ButtonMats/Purple
+MRUItem19=/Game/Materials/ButtonMats/White
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2143,6 +2140,15 @@ sprayTestBP_C.Collision=True
 sprayTestBP_C.Actor=True
 sprayTestBP_C.Input=True
 sprayTestBP_C.TransformCommon=True
+PuzzlePlayerCharacter_C.Character=True
+PuzzlePlayerCharacter_C.Tick=True
+PuzzlePlayerCharacter_C.Camera=True
+PuzzlePlayerCharacter_C.Pawn=True
+PuzzlePlayerCharacter_C.Replication=True
+PuzzlePlayerCharacter_C.Rendering=True
+PuzzlePlayerCharacter_C.Collision=True
+PuzzlePlayerCharacter_C.Actor=True
+PuzzlePlayerCharacter_C.Input=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2280,6 +2286,8 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint.Cube_Blueprint=1
 /Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp.Box_Bp=1
 /Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp=1
+/Game/PuzzleBP/Blueprints/ALAN.ALAN=1
+/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter.PuzzlePlayerCharacter=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/ParticleFX/sprayTestBP.sprayTestBP;
@@ -2369,7 +2377,7 @@ Box_Bp_C="\"Object.Actor.Tags\" "
 StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C="\"Object.ReceivedCommands\" "
+OutputDisplay_C=
 ALAN_C=
 
 [MaterialEditor]
@@ -2599,14 +2607,14 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 ALAN_C=
-BrushComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2682,7 +2690,7 @@ PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,
 CameraActor=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 Actor=SkeletalMeshComponent.Collision.Collision,
-Brush=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Brush=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 TextRenderComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 TriggerVolume=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
