Added colour changing code to ALAN
Added code to the Alan object so it will change the colour of the box it is closest to is commanded, and will check the colour of the box if prompted with an if command

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,7 +158,11 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ConveyorBelt.ConveyorBelt
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
@@ -1032,14 +1036,14 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem1=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem2=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem3=/Game/Geometry/Meshes/CubeMaterial
-MRUItem4=/Game/PuzzleBP/Blueprints/Cube
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem6=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
-MRUItem7=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem4=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem5=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem6=/Game/Geometry/Meshes/CubeMaterial
+MRUItem7=/Game/PuzzleBP/Blueprints/Cube
+MRUItem8=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
 MRUItem9=/Game/PuzzleBP/Maps/GameEnvironment
 MRUItem10=/Game/PuzzleBP/Maps/PuzzleExampleMap
 MRUItem11=/Game/ParticleFX/sprayTestBP
@@ -2228,6 +2232,7 @@ ArrowComponent.Tags=True
 ArrowComponent.Cooking=True
 Cube_C.LOD=True
 Cube_C.Cooking=True
+ALAN_C.TransformCommon=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2377,6 +2382,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Materials/CubeMats/CubeMaterial.CubeMaterial=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/PuzzleBP/Blueprints/ALAN.ALAN;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ColourChanger7.ColourChanger7;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ColourChanger6.ColourChanger6;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ColourChanger5.ColourChanger5;
@@ -2396,7 +2402,6 @@ RecentlyPlaced=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp.Box_Bp;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_OutputDevice.IORail_OutputDevice;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2414,7 +2419,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 SceneComponent=
 ActorComponent=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
@@ -2465,9 +2470,9 @@ StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C=
-ALAN_C=
-ConveyorBelt_C="\"Object.speed\" "
-Cube_C="\"Object.Actor.Tags\" "
+ALAN_C="\"Object.CommandsExecuted\" "
+ConveyorBelt_C=
+Cube_C="\"Object.colour\" "
 
 [MaterialEditor]
 PrimType=2
@@ -2698,7 +2703,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 ControlPanel_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2773,7 +2778,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
-SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+SceneComponent=
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,
@@ -2787,7 +2792,7 @@ GameEnvironment_C=
 StaticMeshSocket=
 Cube_Blueprint_C=
 Box_Bp_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-Cube_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Cube_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ConveyorBelt_C=
 BillboardComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ColourChanger0_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
